src/test/ui/suggestions/suggest-methods.stderr
error[E0599]: no method named `bat` found for type `Foo` in the current scope
  --> $DIR/suggest-methods.rs:28:7
   |
28 |     f.bat(1.0);
   |       ^^^
   |
   = help: did you mean `bar`?
   = help: did you mean `baz`?

error[E0599]: no method named `is_emtpy` found for type `std::string::String` in the current scope
  --> $DIR/suggest-methods.rs:31:15
   |
31 |     let _ = s.is_emtpy();
   |               ^^^^^^^^
   |
   = help: did you mean `is_empty`?

error[E0599]: no method named `count_eos` found for type `u32` in the current scope
  --> $DIR/suggest-methods.rs:34:19
   |
34 |     let _ = 63u32.count_eos();
   |                   ^^^^^^^^^
   |
   = help: did you mean `count_ones`?
   = help: did you mean `count_zeros`?

error[E0599]: no method named `count_o` found for type `u32` in the current scope
  --> $DIR/suggest-methods.rs:35:19
   |
35 |     let _ = 63u32.count_o(); // Does not generate a warning
   |                   ^^^^^^^

error: aborting due to 4 previous errors

